Fix z-index. Autocomplete over thead.

--- a/client/resources/sqlui.css
+++ b/client/resources/sqlui.css
@@ -158,7 +158,7 @@ p {
     border-left: 1px solid #888;
     border-right: 1px solid #888;
     border-bottom: 1px solid #888;
-    z-index: 200;
+    z-index: 2;
     flex-direction: column;
     left: 0;
     right: 0;
@@ -300,7 +300,7 @@ thead {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 1;
     table-layout: fixed;
 }
 
